# razy-cwlogs

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  aws.rs  collection.rs  event.rs  lib.rs  preset.rs  query.rs  session.rs  size.rs  terminal.rs
src/app/: config.rs  data.rs  handler.rs  shell.rs  state.rs  widget.rs
src/app/header/: handler.rs  state.rs  widget.rs
src/app/shell/: handler.rs  state.rs  widget.rs
src/aws/: arn.rs  cwlogs.rs  errors.rs  profile.rs
src/aws/cwlogs/: client.rs  event.rs  group.rs  mapper.rs  stream.rs
src/aws/cwlogs/event/: cursor.rs  model.rs  store.rs
src/aws/cwlogs/group/: cursor.rs  model.rs  store.rs
src/aws/cwlogs/stream/: cursor.rs  model.rs  store.rs
src/collection/: store.rs
src/event/: action.rs  event.rs  key.rs  tick.rs
src/event/key/: crossterm_key.rs
src/ui/: theme.rs  widget.rs
src/ui/widget/: debug.rs  groups.rs  helper.rs  presets.rs  profiles.rs  search.rs  stateful.rs
src/ui/widget/stateful/: list.rs  table.rs
tests/data/: aws_config
