[package]
name = "razy-cwlogs"
version = "0.1.0"
authors = ["yoshihitoh <yoshihito.arih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "razy-cwlogs"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
crossterm = { version = "0.18", features = ["event-stream"] }
dirs-next = "2.0"
futures = "0.3"
once_cell = "1.5"
pin-utils = "0.1"
rusoto_core = "0.45"
rusoto_logs = "0.45"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
tui = { version = "0.13", default-features = false, features = ["crossterm"] }